Replaced rngWState with AnyRNG
Deleted all occurrences of rngWState and related functions and replaced them with AnyRNG and related functions.

--- a/brendancuda_ai_mlpb_mlpbls.tt
+++ b/brendancuda_ai_mlpb_mlpbls.tt
@@ -205,15 +205,15 @@ __global__ void applyTargetFlipsOnArray_kernel(uint8_t* arr, uint32_t flipProb, 
     v = applyTargetFlips(v, flipProb, rn1, rn2, rn3, rn4);
 }
 
-__host__ __device__ void applyTargetFlipsOnArray(uint64_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::rngWState<uint64_t> rng) {
+__host__ __device__ void applyTargetFlipsOnArray(uint64_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::AnyRNG<uint64_t> rng) {
 #if !__CUDA_ARCH__
-    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng.Run());
+    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng());
 #else
     for (size_t i = 0; i < sz; ++i) {
         uint64_t& v(arr[i]);
 
-        uint64_t rn64_1 = rng.Run();
-        uint64_t rn64_2 = rng.Run();
+        uint64_t rn64_1 = rng();
+        uint64_t rn64_2 = rng();
 
         uint32_t rn1 = ((uint32_t*)&rn64_1)[0];
         uint32_t rn2 = ((uint32_t*)&rn64_1)[1];
@@ -224,15 +224,15 @@ __host__ __device__ void applyTargetFlipsOnArray(uint64_t* arr, size_t sz, uint6
     }
 #endif
 }
-__host__ __device__ void applyTargetFlipsOnArray(uint32_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::rngWState<uint64_t> rng) {
+__host__ __device__ void applyTargetFlipsOnArray(uint32_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::AnyRNG<uint64_t> rng) {
 #if !__CUDA_ARCH__
-    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng.Run());
+    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng());
 #else
     for (size_t i = 0; i < sz; ++i) {
         uint32_t& v(arr[i]);
 
-        uint64_t rn64_1 = rng.Run();
-        uint64_t rn64_2 = rng.Run();
+        uint64_t rn64_1 = rng();
+        uint64_t rn64_2 = rng();
 
         uint32_t rn1 = ((uint32_t*)&rn64_1)[0];
         uint32_t rn2 = ((uint32_t*)&rn64_1)[1];
@@ -243,15 +243,15 @@ __host__ __device__ void applyTargetFlipsOnArray(uint32_t* arr, size_t sz, uint6
     }
 #endif
 }
-__host__ __device__ void applyTargetFlipsOnArray(uint16_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::rngWState<uint64_t> rng) {
+__host__ __device__ void applyTargetFlipsOnArray(uint16_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::AnyRNG<uint64_t> rng) {
 #if !__CUDA_ARCH__
-    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng.Run());
+    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng());
 #else
     for (size_t i = 0; i < sz; ++i) {
         uint16_t& v(arr[i]);
 
-        uint64_t rn64_1 = rng.Run();
-        uint64_t rn64_2 = rng.Run();
+        uint64_t rn64_1 = rng();
+        uint64_t rn64_2 = rng();
 
         uint32_t rn1 = ((uint32_t*)&rn64_1)[0];
         uint32_t rn2 = ((uint32_t*)&rn64_1)[1];
@@ -262,15 +262,15 @@ __host__ __device__ void applyTargetFlipsOnArray(uint16_t* arr, size_t sz, uint6
     }
 #endif
 }
-__host__ __device__ void applyTargetFlipsOnArray(uint8_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::rngWState<uint64_t> rng) {
+__host__ __device__ void applyTargetFlipsOnArray(uint8_t* arr, size_t sz, uint64_t flipProb, BrendanCUDA::Random::AnyRNG<uint64_t> rng) {
 #if !__CUDA_ARCH__
-    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng.Run());
+    applyTargetFlipsOnArray_kernel<<<sz, 1>>>(arr, flipProb, rng());
 #else
     for (size_t i = 0; i < sz; ++i) {
         uint8_t& v(arr[i]);
 
-        uint64_t rn64_1 = rng.Run();
-        uint64_t rn64_2 = rng.Run();
+        uint64_t rn64_1 = rng();
+        uint64_t rn64_2 = rng();
 
         uint32_t rn1 = ((uint32_t*)&rn64_1)[0];
         uint32_t rn2 = ((uint32_t*)&rn64_1)[1];
@@ -426,27 +426,27 @@ __host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::A
     CopyTo(n);
     return n;
 }
-__host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::RandomizeWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng) {
+__host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::RandomizeWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng) {
     RandomizeArray(weights, 64, WeightsFlipProb, rng);
     RandomizeArray(bias, 1, BiasFlipProb, rng);
 }
-__host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::ReproduceWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng) const {
+__host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::ReproduceWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng) const {
     MLPBL<#= i #>T<#= j #> n = Clone();
     n.RandomizeWFlips(WeightsFlipProb, BiasFlipProb, rng);
     return n;
 }
-__host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::RandomizeWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng) {
+__host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::RandomizeWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng) {
     applyTargetFlipsOnArray(weights, 64, WeightsEachFlipProb, rng);
     RandomizeArray(bias, 1, BiasFlipProb, rng);
 }
-__host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::ReproduceWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng) const {
+__host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::ReproduceWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng) const {
     MLPBL<#= i #>T<#= j #> n = Clone();
     n.RandomizeWTargets(WeightsEachFlipProb, BiasFlipProb, rng);
     return n;
 }
-__host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::RandomizeWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::rngWState<uint64_t> rng) {
+__host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::RandomizeWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::AnyRNG<uint64_t> rng) {
     for (uint32_t i = 0; i < 64; ++i) {
-        if (rng.Run() < WeightsMutationProb) {
+        if (rng() < WeightsMutationProb) {
             uint<#= i #>_t v = (uint<#= i #>_t)BrendanCUDA::Random::Get64Bits(WeightsProbOf1, rng);
 
 #if __CUDA_ARCH__
@@ -456,7 +456,7 @@ __host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::Randomiz
 #endif
         }
     }
-    if (rng.Run() < WeightsMutationProb) {
+    if (rng() < WeightsMutationProb) {
         uint<#= j #>_t v = (uint<#= j #>_t)BrendanCUDA::Random::Get64Bits(BiasProbOf1, rng);
         
 #if __CUDA_ARCH__
@@ -466,7 +466,7 @@ __host__ __device__ void BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::Randomiz
 #endif
     }
 }
-__host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::ReproduceWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::rngWState<uint64_t> rng) const {
+__host__ __device__ BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #> BrendanCUDA::AI::MLPB::MLPBL<#= i #>T<#= j #>::ReproduceWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::AnyRNG<uint64_t> rng) const {
     MLPBL<#= i #>T<#= j #> n = Clone();
     n.RandomizeWMutations(WeightsMutationProb, WeightsProbOf1, BiasMutationProb, BiasProbOf1, rng);
     return n;
