--- a/brendancuda_ai_mlpb_mlpbls_H.tt
+++ b/brendancuda_ai_mlpb_mlpbls_H.tt
@@ -3,7 +3,7 @@
 #include <cuda_runtime.h>
 #include <memory>
 #include "brendancuda_devicecopy.cuh"
-#include "brendancuda_random_rngfunc.cuh"
+#include "brendancuda_random_anyrng.cuh"
 #include "brendancuda_ai.cuh"
 
 namespace BrendanCUDA {
@@ -34,12 +34,12 @@ namespace BrendanCUDA {
                 __host__ __device__ void CopyTo(MLPBL<#= i #>T<#= j #> Other) const;
 
                 __host__ __device__ MLPBL<#= i #>T<#= j #> Clone() const;
-                __host__ __device__ void RandomizeWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng);
-                __host__ __device__ MLPBL<#= i #>T<#= j #> ReproduceWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng) const;
-                __host__ __device__ void RandomizeWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng);
-                __host__ __device__ MLPBL<#= i #>T<#= j #> ReproduceWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::rngWState<uint64_t> rng) const;
-                __host__ __device__ void RandomizeWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::rngWState<uint64_t> rng);
-                __host__ __device__ MLPBL<#= i #>T<#= j #> ReproduceWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::rngWState<uint64_t> rng) const;
+                __host__ __device__ void RandomizeWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng);
+                __host__ __device__ MLPBL<#= i #>T<#= j #> ReproduceWFlips(uint32_t WeightsFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng) const;
+                __host__ __device__ void RandomizeWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng);
+                __host__ __device__ MLPBL<#= i #>T<#= j #> ReproduceWTargets(uint32_t WeightsEachFlipProb, uint32_t BiasFlipProb, Random::AnyRNG<uint64_t> rng) const;
+                __host__ __device__ void RandomizeWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::AnyRNG<uint64_t> rng);
+                __host__ __device__ MLPBL<#= i #>T<#= j #> ReproduceWMutations(uint32_t WeightsMutationProb, uint32_t WeightsProbOf1, uint32_t BiasMutationProb, uint32_t BiasProbOf1, Random::AnyRNG<uint64_t> rng) const;
 
                 __host__ void Serialize(std::basic_ostream<char>& Stream) const;
                 __host__ MLPBL<#= i #>T<#= j #> Deserialize(std::basic_istream<char>& Stream);
